<resources>
    <string name="app_name">MADProject</string>
    <string name="tv1_name">Farm Care</string>
    <string name="home_btn1">Harvest</string>
    <string name="home_btn2">Selliing</string>
    <string name="home_btn3">Management</string>
    <string name="home_btn4">Employee</string>
    <string name="iv_home" />
    <string name="tv_userlogin">User Login</string>
    <string name="tv_logusername">Username</string>
    <string name="pt_logusername">Enter Username</string>
    <string name="tv_logpassword">Password</string>
    <string name="et_logpassword">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_signin">Sign In</string>
    <string name="btn_addimage">Add Image</string>
    <string name="tv_signname">Name</string>
    <string name="et_signname">Name</string>
    <string name="tv_signemail">Email</string>
    <string name="et_signemail">Email</string>
    <string name="tv_signphone">Phone</string>
    <string name="et_signphone">Phone</string>
    <string name="tv_signlocation">Location</string>
    <string name="et_signlocation">Location</string>
    <string name="tv_signusername">Username</string>
    <string name="et_signusername">Username</string>
    <string name="tv_signpassword">Password</string>
    <string name="et_signpassword">Password</string>
    <string name="btn_signin">Sign In</string>
    <string name="tv_userprofile">User Profile</string>
    <string name="tv_proname">Name</string>
    <string name="et_proname">Nimal Peris</string>
    <string name="tv_proemail">Email</string>
    <string name="et_proemial">nimal@gmail.com</string>
    <string name="tv_prophone">Phone</string>
    <string name="et_prophone">+94765580939</string>
    <string name="tv_prolocation">Location</string>
    <string name="et_prolocation">Ambewela, Sri Lanka</string>
    <string name="tv_prousername">Username</string>
    <string name="et_prousername">Nimal Peris</string>
    <string name="tv_propassword">Password</string>
    <string name="et_propassword">*************</string>
    <string name="btn_editprofile">Edit Profile</string>
    <string name="btn_deleteprofile">Delete Profile</string>
    <string name="tv_animalharvest">Harvest(Animal Products)</string>
    <string name="btn_aniaddnew">Add New</string>
    <string name="btn_anicompare">Compare</string>
    <string name="tv_haranimaltype1">Animal Type</string>
    <string name="tv_harproducttype1">Product Type</string>
    <string name="tv_harsection">Section</string>
    <string name="tv_hardate1">Date</string>
    <string name="tv_haramount1">Amount</string>
    <string name="tv_anitypedata1">Cow</string>
    <string name="tv_protypedata1">Milk</string>
    <string name="tv_sectiondata1">Section 10</string>
    <string name="tv_datedata1">21/06/2021</string>
    <string name="tv_amountdata1">200 Gallons</string>
    <string name="tv_anitypedata2">Goat</string>
    <string name="tv_protypedata2">Milk</string>
    <string name="tv_sectiondata2">Section 13</string>
    <string name="tv_datedata2">21/06/2021</string>
    <string name="tv_amountdata">150 Gallons</string>
    <string name="btn_edit1">Edit</string>
    <string name="btn_delete1">Delete</string>
    <string name="tv_cropharvest">Harvest(Crop)</string>
    <string name="tv_haracroptype1">Crop Type</string>
    <string name="tv_harcropsection1">Section</string>
    <string name="tv_cropsectiondata1">Section 1</string>
    <string name="tv_harcroptype1">Crop Type</string>
    <string name="tv_croptypedata1">Carrot</string>
    <string name="tv_cropharsection1">Section</string>
    <string name="tv_cropharsectiondata1">Section 1</string>
    <string name="tv_harcroppingdate">Cropping Date</string>
    <string name="tv_croppingdatedata1">21/06/2021</string>
    <string name="tv_harcropamount">Amount</string>
    <string name="tv_harcondition1">Condition</string>
    <string name="tv_cropamountdata1">900kg</string>
    <string name="tv_cropconditiondata1">Good</string>
    <string name="tv_croptypedata2">Leeks</string>
    <string name="tv_cropsectiondata2">Section 3</string>
    <string name="tv_croppingdata2">21/06/2021</string>
    <string name="tv_cropamountdata2">750kg</string>
    <string name="tv_cropconditiondata2">Good</string>
    <string name="tv_addcropharvest">Add Harvest</string>
    <string name="et_addsection" />
    <string name="et_addcroptype" />
    <string name="et_cropamount" />
    <string name="et_cropcondition" />
    <string name="btn_cropharvestsubmit">Submit</string>
    <string name="btn_clearbtn1">Clear</string>
    <string name="tv_editcropharvest">Edit Harvest</string>
    <string name="et_editcroptype">Leeks</string>
    <string name="et_editcropsection">Section 3</string>
    <string name="et_editcroppingdate">21/05/2021</string>
    <string name="et_editcropamount">750kg</string>
    <string name="et_editcropcondition">Good</string>
    <string name="btn_editcrop">Edit</string>
    <string name="btn_canceleditcrop">Cancel</string>
    <string name="tv_addanimalharvest">Add Harvest</string>
    <string name="tv_haranimaltype2">Animal Type</string>
    <string name="tv_harproducttype2">Product Type</string>
    <string name="tv_haranimalsection2">Section</string>
    <string name="tv_haranidate2">Date</string>
    <string name="tv_haranimalamount">Amount</string>
    <string name="et_animalhardata1" />
    <string name="et_animalharvestproductdata" />
    <string name="et_animalharvestsectiondata1" />
    <string name="et_animalharvestdatedata1" />
    <string name="et_animalharvestaountdata1" />
    <string name="btn_animalharvestsubmit">Submit</string>
    <string name="btn_animalharvestclear">Clear</string>
    <string name="tv_editanimalharvest">Edit Harvest</string>
    <string name="tv_editharvestanimaltype">Animal Type</string>
    <string name="tv_editharvestproducttype">Product Type</string>
    <string name="tv_eitharvestsection">Section</string>
    <string name="tv_editharvestdate">Date</string>
    <string name="tv_editharvestamount">Amount</string>
    <string name="et_editharvestanimaltype">Cow</string>
    <string name="et_editharvestproucttype">Milk</string>
    <string name="et_editharvestsection">Section</string>
    <string name="et_editharvestdate">21/05/2021</string>
    <string name="et_editharvestamount">200 Gallons</string>
    <string name="btn_animlharvestedit">Edit</string>
    <string name="btn_animalharvestcancel">Cancel</string>
    <string name="tv_harvestcomparison">Harvest Comparison</string>
    <string name="btn_showbarchart">Show Barchart</string>
    <string name="tv_totalharvestpersentages">Total Harvest Percentages</string>
    <string name="tv_percentages">Total Harvest Percentages</string>
    <string name="tv_harvestmanagement">Harvest Management</string>
    <string name="btn_gotocropharvest">Crop Harvest</string>
    <string name="btn_gotoanimalharvest">Animal Products</string>

</resources>