<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="65dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/userprofile2" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:layout_marginTop="72dp"
        android:background="#0D2E2B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_home"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:contentDescription="@string/iv_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/ic_home" />

    <TextView
        android:id="@+id/tv_userprofile"
        android:layout_width="232dp"
        android:layout_height="43dp"
        android:background="#018786"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/tv_userprofile"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/iv_profile"
        app:layout_constraintStart_toEndOf="@+id/iv_home"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="109dp"
        android:layout_height="101dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_userprofile"
        app:srcCompat="@drawable/userprofile2" />

    <TextView
        android:id="@+id/tv_proname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:text="@string/tv_proname"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="216dp" />

    <EditText
        android:id="@+id/et_proname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_proname"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_proname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toEndOf="@+id/tv_proname" />

    <TextView
        android:id="@+id/tv_proemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_proemail"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_proname" />

    <EditText
        android:id="@+id/et_proemial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/et_proemial"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_proemail"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_prophone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:text="@string/tv_prophone"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="372dp" />

    <EditText
        android:id="@+id/et_prophone"
        android:layout_width="231dp"
        android:layout_height="49dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/et_prophone"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_prophone"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_prolocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:text="@string/tv_prolocation"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="449dp" />

    <EditText
        android:id="@+id/et_prolocation"
        android:layout_width="233dp"
        android:layout_height="52dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_prolocation"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_prolocation"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_prousername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_prousername"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="530dp" />

    <EditText
        android:id="@+id/et_prousername"
        android:layout_width="225dp"
        android:layout_height="52dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/et_prousername"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_prousername"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_propassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_propassword"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="608dp" />

    <EditText
        android:id="@+id/et_propassword"
        android:layout_width="230dp"
        android:layout_height="51dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/et_propassword"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_propassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_editprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_editprofile"
        app:backgroundTint="#0E5958"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_deleteprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_deleteprofile"
        app:backgroundTint="#0E5958"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/btn_editprofile" />
</androidx.constraintlayout.widget.ConstraintLayout>
