<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context=".MainActivity6">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/userprofile2" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:layout_marginTop="72dp"
        android:background="#0D2E2B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_home"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:contentDescription="@string/iv_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/ic_home" />

    <TextView
        android:id="@+id/tv_editcropharvest"
        android:layout_width="279dp"
        android:layout_height="43dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:background="#018786"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/tv_editcropharvest"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/iv_profile"
        app:layout_constraintStart_toEndOf="@+id/iv_home"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_harcroptype1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/tv_harcroptype1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_cropharsection1"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/tv_cropharsection1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="40dp"
        android:text="@string/tv_cropharsection1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_harcroppingdate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_harcroppingdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="36dp"
        android:text="@string/tv_harcroppingdate"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_harcropamount"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_harcropamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/tv_harcropamount"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_harcondition1"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/tv_harcondition1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="@string/tv_harcondition1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="378dp" />

    <EditText
        android:id="@+id/et_editcroptype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/et_editcroptype"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_harcroptype1"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_editcropsection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/et_editcropsection"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_cropharsection1"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_editcroppingdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/et_editcroppingdate"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_harcroppingdate"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_editcropamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/et_editcropamount"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_harcropamount"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/et_editcropcondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/et_editcropcondition"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_harcondition1"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_editcrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_editcrop"
        app:backgroundTint="#015887"
        app:layout_constraintEnd_toStartOf="@+id/btn_canceleditcrop"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="487dp" />

    <Button
        android:id="@+id/btn_canceleditcrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/btn_canceleditcrop"
        app:backgroundTint="#015887"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_editcrop"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="186dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/vegetables" />


</androidx.constraintlayout.widget.ConstraintLayout>